# core_extensions

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  build.rs  readme.md  run_tests.sh
.github/workflows/: rust.yml
core_extensions_proc_macros/: Cargo.toml  MIT_license
core_extensions_proc_macros/src/: derive.rs  item_parsing.rs  lib.rs  macro_utils.rs  macro_utils_shared.rs  parsing_shared.rs  splitting_generics.rs  test_utils.rs  tests.rs
core_extensions_proc_macros/src/derive/: attr_parsing.rs  const_default_derive.rs  datastructure.rs  transparent_newtype_derive.rs  utils.rs
core_extensions_proc_macros/src/derive/const_default_derive/: cd_attribute_parsing.rs  cd_tests.rs
core_extensions_proc_macros/src/derive/transparent_newtype_derive/: tn_attribute_parsing.rs  tn_tests.rs
core_extensions_proc_macros/src/macro_utils/: mu_tests.rs
core_extensions_proc_macros/src/macro_utils_shared/: cmp_ts.rs  list_generation.rs
core_extensions_proc_macros/src/macro_utils_shared/list_generation/: concat_idents.rs
src_core_extensions/: bool_extensions.rs  callable.rs  const_default.rs  const_default_trait.rs  const_val.rs  integer_extensions.rs  integers.rs  internal_macros.rs  iterators.rs  lib.rs  macros.rs  main.rs  marker_traits.rs  marker_type.rs  maybe_unsafe.rs  measure_time.rs  on_drop.rs  phantom.rs  phantom_variances.rs  rust_version_assert.rs  self_ops.rs  test_utils.rs  transparent_newtype.rs  try_from.rs  type_assert_panic.rs  type_asserts.rs  type_identity.rs  type_level_bool.rs  utils.rs  void.rs
src_core_extensions/callable/: tests.rs
src_core_extensions/collection_traits/: array_impls.rs  cloned_items.rs  mod.rs  tuple_impls.rs
src_core_extensions/collections/: array_impls.rs  cloned_items.rs  mod.rs  tuple_impls.rs
src_core_extensions/derive/: const_default_docs.rs  transparent_newtype_docs.rs
src_core_extensions/macros/: const_default.rs  constval_macros.rs  generics_parsing.rs  internal.rs  item_parsing.rs  macro_utils.rs  matches_macro.rs  phantomdata.rs  transparent_newtype_macros.rs
src_core_extensions/macros/macro_utils/: tokens_method.rs
src_core_extensions/measure_time/: mod.rs  serde_duration_expanded_impls.rs
src_core_extensions/on_drop/: tests.rs
src_core_extensions/option_result_ext/: mod.rs  option_extensions.rs  result_extensions.rs  result_like.rs
src_core_extensions/slices/: extensions.rs  mod.rs  slice_bias.rs  slice_split_while.rs
src_core_extensions/strings/: iterators.rs  mod.rs
src_core_extensions/type_level_bool/: mod.rs
tests/: misc_tests_modules.rs
tests/misc_tests/: const_default_derive.rs  generics_parsing_tests.rs  item_parsing_tests.rs  macro_utils_tests.rs  parse_generics_tests.rs  quasiconst_tests.rs  result_option_extension_tests.rs  transparent_newtype_tests.rs  type_identity_tests.rs  utils_tests.rs
tests/misc_tests/macro_utils_tests/: tokens_method_tests.rs
tests/misc_tests/transparent_newtype_tests/: tn_derive_tests.rs
