[package]
name = "core_extensions"
version = "0.1.20"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
description="This crate provides many extensions to core/std library types."
license="MIT/Apache-2.0"
readme="readme.md"
repository="https://github.com/rodrimati1992/core_extensions"
keywords = ["no-std"]
categories = [ "no-std" ]
include = [
    "Cargo.toml", 
    "src_core_extensions/**/*.rs", 
    "build.rs", 
    "./readme.md", 
    "./APACHE_license", "./MIT_license"
]

[badges]
travis-ci = { repository =  "rodrimati1992/core_extensions/" }

[features]
# TODO: comment this out
default = ["std", "track_caller"]

std=["alloc"]
alloc=[]

serde_=["serde"]
collections=[]

# Changes ResultLike to allow getting the caller location in `ResultLike::into_result_`
track_caller = ["rust_1_46"]

rust_1_44 = []
rust_1_46 = ["rust_1_44"]

# Enables indicators in the docs for what features are required to enable items.
docsrs = []

const_generics = []
nightly_const_generics = ["const_generics"]

[dev-dependencies]
rand = "0.4.6"

[dependencies.serde]
version = "1.0"
default-features = false
optional=true
features = ["derive"]

[dependencies.typenum]
version="1.10"
features=["no_std"]
default-features = false
optional=true

[lib]
name = "core_extensions"
path = "src_core_extensions/lib.rs"

[package.metadata.docs.rs]
features = ["serde", "colltraits", "const_generics", "docsrs"]



# [[bin]]
# name="core_extensions_main"
# path="src_core_extensions/main.rs"
