[package]
name = "core_extensions"
version = "0.1.20"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
description="This crate provides many extensions to core/std library types."
license="MIT/Apache-2.0"
readme="readme.md"
repository="https://github.com/rodrimati1992/core_extensions"
keywords = ["no-std"]
categories = [ "no-std" ]
include = [
    "Cargo.toml", 
    "src_core_extensions/**/*.rs", 
    "build.rs", 
    "./readme.md", 
    "./APACHE_license", "./MIT_license"
]

[badges]
travis-ci = { repository =  "rodrimati1992/core_extensions/" }

[features]
# TODO: comment this out
default = [
    "std",
]

# Enables all the items in core_extensions 1.0
in_1_0 = [
    "bools",
    "callable",
    "collections",
    "const_default",
    "const_val",
    "integers",
    "iterators",
    "marker_type",
    "on_drop",
    "option_result",
    "phantom",
    "self_ops",
    "slices",
    "transparent_newtype",
    "type_asserts",
    "type_identity",
    "type_level_bool",
    "void",
]

std=["alloc"]
alloc=[]

serde_=["serde"]

bools=["type_identity"]
callable=[]
collections=[]
const_default=[]
const_val=["enable_proc_macro_crate"]
integers=[]
iterators=[]
marker_type=[]
on_drop=[]
option_result=["type_identity"]
phantom=[]
self_ops=[]
slices=[]
strings=["slices"]
transparent_newtype=[]
type_asserts=["type_identity"]
type_identity=[]
type_level_bool=[]
void=[]

# Changes ResultLike to allow getting the caller location in `ResultLike::into_result_`
track_caller = ["rust_1_46"]

enable_proc_macro_crate = ["core_extensions_proc_macros"]

rust_1_46 = []

# Enables indicators in the docs for what features are required to enable items.
docsrs = []

const_generics = []
nightly_const_generics = ["const_generics"]

[dev-dependencies]
rand = "0.4.6"

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.core_extensions_proc_macros]
version = "1.0"
path = "./core_extensions_proc_macros"
optional = true


[lib]
name = "core_extensions"
path = "src_core_extensions/lib.rs"

[package.metadata.docs.rs]
features = ["serde", "colltraits", "const_generics", "docsrs"]



# [[bin]]
# name="core_extensions_main"
# path="src_core_extensions/main.rs"
