[package]
name = "core_extensions"
version = "1.5.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
description="Extensions for core/std library types, and other miscelaneous features."
license="MIT/Apache-2.0"
readme="readme.md"
repository="https://github.com/rodrimati1992/core_extensions"
keywords = ["no-std"]
categories = ["no-std"]
include = [
    "Cargo.toml", 
    "src_core_extensions/**/*.rs", 
    "build.rs", 
    "./readme.md", 
    "./APACHE_license", "./MIT_license"
]


[badges]
travis-ci = { repository =  "rodrimati1992/core_extensions/" }

[features]

# Enables all the items
all_items = [
    "all_items_no_derive",
    "derive",
]
all_items_no_derive = [
    "bools",
    "callable",
    "collections",
    "const_default",
    "const_val",
    "generics_parsing",
    "item_parsing",
    "macro_utils",
    "integers",
    "iterators",
    "marker_type",
    "on_drop",
    "option_result",
    "phantom",
    "self_ops",
    "slices",
    "strings",
    "transparent_newtype",
    "type_asserts",
    "type_identity",
    "type_level_bool",
    "void",
]

std=["alloc"]
alloc=[]

serde_=["serde"]

derive = ["enable_proc_macro_crate", "core_extensions_proc_macros/derive"]

bools=["type_identity"]
callable=[]
collections=[]
const_default=[]
const_val=["enable_proc_macro_crate", "generics_parsing"]
macro_utils=["enable_proc_macro_crate", "core_extensions_proc_macros/macro_utils"]
generics_parsing=["enable_proc_macro_crate"]
item_parsing=["generics_parsing", "macro_utils", "core_extensions_proc_macros/item_parsing"]
integers=[]
iterators=[]
marker_type=[]
on_drop=[]
option_result=["type_identity"]
phantom=[]
self_ops=[]
slices=[]
strings=["slices"]
transparent_newtype=["marker_type"]
type_asserts=["type_identity"]
type_identity=[]
type_level_bool=[]
void=[]

# Changes ResultLike to allow getting the caller location in `ResultLike::into_result_`
track_caller = ["rust_1_46"]

enable_proc_macro_crate = ["core_extensions_proc_macros"]

rust_1_46 = ["core_extensions_proc_macros/rust_1_45"]
rust_1_51 = ["rust_1_46", "on_drop"]
rust_latest_stable = ["rust_1_51"]

__test = []

# Enables indicators in the docs for what features are required to enable items.
docsrs = []

[dev-dependencies]
rand = "0.4.6"
static_assertions = "1.1"

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.core_extensions_proc_macros]
version = "=1.5.0"
path = "./core_extensions_proc_macros"
optional = true


[lib]
name = "core_extensions"
path = "src_core_extensions/lib.rs"

[package.metadata.docs.rs]
features = ["std", "serde_", "all_items", "rust_latest_stable", "docsrs"]



# [[bin]]
# name="core_extensions_main"
# path="src_core_extensions/main.rs"
