[package]
name = "core_extensions_proc_macros"
version = "1.4.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license="MIT/Apache-2.0"
repository="https://github.com/rodrimati1992/core_extensions"
description = "Implementation detail of the `core_extensions` crate"
keywords = []
categories = []
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../APACHE_license", 
    "../MIT_license",
]

[features]
rust_1_45 = []
item_parsing = ["macro_utils"]
macro_utils = []

[dev-dependencies.proc-macro2]
version = "1.0.19"


[lib]
proc-macro = true
