[package]
name = "core_extensions_proc_macros"
version = "1.4.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license="MIT/Apache-2.0"
repository="https://github.com/rodrimati1992/core_extensions"
description = "Implementation detail of the `core_extensions` crate"
keywords = []
categories = []
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../APACHE_license", 
    "../MIT_license",
]

[features]
derive = ["syn", "quote", "proc-macro2"]
rust_1_45 = []
item_parsing = ["macro_utils"]
macro_utils = []

[dependencies.syn]
version = "1.0.77"
optional = true

[dependencies]
proc-macro2 = {version = "1.0.19", optional = true}
quote = {version = "1.0.9", optional = true}


[dev-dependencies.proc-macro2]
version = "1.0.19"


[lib]
proc-macro = true
